------------------
Pylint's ChangeLog
------------------


What's New in Pylint 2.11.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.11.rst'

* Added ``py-version`` config key (if ``[MASTER]`` section). Used for version dependant checks.
  Will default to whatever Python version pylint is executed with.


What's New in Pylint 2.10.3?
============================
Release date: TBA



What's New in Pylint 2.10.2?
============================
Release date: 2021-08-21

..
  Put bug fixes that should not wait for a new minor version here

* We now use platformdirs instead of appdirs since the latter is not maintained.

  Closes #4886

* Fix a crash in the checker raising ``shallow-copy-environ`` when failing to infer
  on ``copy.copy``

  Closes #4891



What's New in Pylint 2.10.1?
============================
Release date: 2021-08-20

* pylint does not crash when PYLINT_HOME does not exist.

  Closes #4883


What's New in Pylint 2.10.0?
============================
Release date: 2021-08-20

* pyreverse: add option to produce colored output.

  Closes #4488

* pyreverse: add output in PlantUML format.

  Closes #4498

* ``consider-using-with`` is no longer triggered if a context manager is returned from a function.

  Closes #4748

* pylint does not crash with a traceback anymore when a file is problematic. It
  creates a template text file for opening an issue on the bug tracker instead.
  The linting can go on for other non problematic files instead of being impossible.

* pyreverse: Show class has-a relationships inferred from the type-hint

  Closes #4744

* Fixed a crash when importing beyond the top level package during ``import-error``
  message creation

  Closes #4775

* Added ``ignored-parents`` option to the design checker to ignore specific
  classes from the ``too-many-ancestors`` check (R0901).

  Partially closes #3057
