@@ -16,6 +16,13 @@ New checkers
 Extensions
 ==========
 
+* ``CodeStyleChecker``
+
+  * Added ``consider-using-assignment-expr``: Emitted when an assignment is directly followed by an if statement
+    and both can be combined by using an assignment expression ``:=``. Requires Python 3.8
+
+    Closes #4862
+
 
 Other Changes
 =============
