@@ -1,0 +1,18 @@
+consider-using-assignment-expr:4:3::"Use 'if (a1 := 2):' instead":HIGH
+consider-using-assignment-expr:16:3::"Use 'if (a3 := 2) == a3_a:' instead":HIGH
+consider-using-assignment-expr:26:7:func_a:"Use 'if (a5 := some___object.function_name_is_just_long_enough_to_fit_in_line()) is None:' instead":HIGH
+consider-using-assignment-expr:41:3::"Use 'if (b1 := 2):' instead":HIGH
+consider-using-assignment-expr:45:3::"Use 'if (b2 := some_function(2, 3)):' instead":HIGH
+consider-using-assignment-expr:49:3::"Use 'if (b3 := some_object.variable):' instead":HIGH
+consider-using-assignment-expr:55:7::"Use 'if not (c1 := 2):' instead":HIGH
+consider-using-assignment-expr:61:3::"Use 'if (d1 := 2) is True:' instead":HIGH
+consider-using-assignment-expr:65:3::"Use 'if (d2 := 2) is not None:' instead":HIGH
+consider-using-assignment-expr:69:3::"Use 'if (d3 := 2) == 2:' instead":HIGH
+consider-using-assignment-expr:90:3::"Use 'if (o3 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:96:3::"Use 'if (o4 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:102:3::"Use 'if (o5 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:108:3::"Use 'if (o6 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:127:7:func_p:"Use 'if (p3 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:133:7:func_p:"Use 'if (p4 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:139:7:func_p:"Use 'if (p5 := 2) == 1:' instead":HIGH
+consider-using-assignment-expr:145:7:func_p:"Use 'if (p6 := 2) == 1:' instead":HIGH
